--- a/css/style.scss
+++ b/css/style.scss
@@ -137,3 +137,90 @@ img {
   background-size: cover;
 }
 
+
+
+/* Colecction */
+
+.border-rosado-top {
+    background-color: #f5e9e8;
+    width: 100%;
+    height: 15%;
+    position: absolute;
+    top: 0;
+}
+.border-rosado-bottom {
+    background-color: #f5e9e8;
+    width: 100%;
+    height: 15%;
+    position: absolute;
+    bottom: 0;
+}
+
+.ctn-gallery {
+    display: flex;
+    justify-content: center;
+
+    img {
+        width: 60% !important;
+    }
+    .ctn-info-slide {
+        h3{
+            font-size: 25px;
+            margin-bottom: 15%;
+        }
+
+        p {
+            color: #c1c1c1;
+            margin-bottom: 25px;
+            border-bottom: 1px solid #c1c1c1;
+            padding-bottom: 25px;
+        }
+
+        .contact-price{
+            a {
+                background-color: #d5ccba;
+                padding: 15px 0px;
+                font-weight: 100;
+                display: block;
+                margin: 20px 0;
+                color: #8c7272;
+            }
+
+            .icon-map {
+                span{
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+}
+
+.container-slide {
+    .owl-nav {
+        button {
+            margin-top: -60px !important;
+            position: absolute;
+            top: 50%;
+            color: #847f84;
+            span {
+              font-size: 52px;
+              color: #847f84;
+            }
+        }
+        .owl-prev {
+            left: -30px;
+        }
+
+        .owl-next {
+            right: -30px;
+        }
+    }
+
+    .owl-dots {
+        display: none;
+    }
+    .owl-theme .owl-nav [class*=owl-]:hover {
+        background-color: #ffff;
+        color: #847f84;
+    }
+}
