--- a/css/home.scss
+++ b/css/home.scss
@@ -5,6 +5,7 @@ DESCRIPCIÓN: HOJA DE ESTILOS PARA EL HOME PAGE
 ****************************************************/
 @import 'style.scss';
 @import 'animate.css';
+@import 'menu';
 
 
 #myVideo {
@@ -95,7 +96,7 @@ section.about {
 
 .container-slide {
     margin: 0 auto;
-    max-width: 750px;
+    max-width: 950px;
 }
 
 section.contact {
