--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@ html,body{
 body{
   position: relative;
   background-color: transparent;
+  font-family: 'TitilliumWeb-Regular';
 }
 /* Fonts */
 
@@ -165,7 +166,7 @@ img {
     }
     .ctn-info-slide {
         h3{
-            font-size: 25px;
+            font-size: 18px;
             margin-bottom: 15%;
         }
 
@@ -178,7 +179,7 @@ img {
 
         .contact-price{
             a {
-                background-color: #d5ccba;
+                background-color: #e4e4e4;
                 padding: 15px 0px;
                 font-weight: 100;
                 display: block;
@@ -223,4 +224,31 @@ img {
         background-color: #ffff;
         color: #847f84;
     }
+}
+
+.info-jarapay  {
+    background-color: #dfd2d2;
+    padding: 20px 0;
+    text-align: center;
+
+    .ctn-text-about{
+        margin: 0 auto;
+        max-width: 750px;
+        font-family: "TitilliumWeb-Light";
+        color: #b89591;
+        font-size: 20px;
+
+        h2 {
+            color: #912614;
+            font-family: "TitilliumWeb-Light";
+            margin-bottom: 45px;
+            margin-top: 40px;
+        }
+    }
+}
+
+
+.ctn-info-slide {
+    width: 30%;
+    margin-right: 25px;
 }
