--- a/css/menu.scss
+++ b/css/menu.scss
@@ -8,7 +8,7 @@
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #d2c7d8;
+    background-color: #c5a9a6;
     width: 36px;
     height: 64px;
     border-radius: 0 10px 10px 0;
@@ -21,7 +21,7 @@
         
         & > span {
             display: block;
-            background-color: #625a69;
+            background-color: #912614;
             width: 100%;
             height: 3px;
             border-radius: 10px;
@@ -125,6 +125,7 @@
                 color: #912614;
                 display: block;
                 font-weight: 500;
+                font-family: 'TitilliumWeb-Regular';
             }
 
             
