--- a/css/style.scss
+++ b/css/style.scss
@@ -252,3 +252,20 @@ img {
     width: 30%;
     margin-right: 25px;
 }
+
+@media screen and (max-width: 768px) {
+    .item.ctn-gallery {
+        display: block;
+        margin-top: 65px;
+
+        .ctn-info-slide {
+            width: 90%;
+            margin: 0 auto;
+
+            h3 {
+                margin-top: 20px;
+            }
+        }
+    }
+    
+}
